--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             <div class="destination" id="jordan">
                 <h2>Jordan</h2>
             </div>
+            
+            <div class="destination" id="ksa">
+                <h2>KSA</h2>
+            </div>
         </div>
     </div>
 
